# PINN-semiconductor-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: activation.hpp  domain.hpp  fd_solver.hpp  loss.hpp  network.hpp  optimizers.hpp  pinn.hpp  semiconductor_params.hpp  utils.hpp
scripts/: convert_results_to_csv.py  generate_doping_profile.py  plot_results.py
src/: domain.cpp  fd_solver.cpp  loss.cpp  main.cpp  network.cpp  optimizers.cpp  pinn.cpp  utils.cpp
tests/: test_fd_solver.cpp  test_network.cpp  test_pinn.cpp
